--- a/.github/workflows/tensorflow.yml
+++ b/.github/workflows/tensorflow.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Build docker image
         run: make buildTrainImage
 
-      - run: -|
+      - name: Setup graph.png
+        run: -|
           touch graph.png
           chmod 666 graph.png
 
