--- a/.github/workflows/tensorflow.yml
+++ b/.github/workflows/tensorflow.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Train
         run: make ciTrain
 
+      - name: Upload training data image
+        uses: actions/upload-artifact@v3
+        with:
+          name: graph.png
+          path: graph.png
+
       - name: Upload image
         id: upload-image
         uses: McCzarny/upload-image@v1.0.0
@@ -28,4 +34,4 @@ jobs:
           uploadMethod: imgbb
           apiKey: '${{ secrets.IMGBB_API_KEY }}'
 
-      - run: echo ${{ steps.upload-image.outputs.* }} >> $GITHUB_STEP_SUMMARY
+      - run: echo "![Training Graph](${{ steps.upload-image.outputs.url }}) >> $GITHUB_STEP_SUMMARY
